--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   dio: ^5.3.2
   flutter_bloc: ^8.1.3
   bloc: ^8.1.2
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
